--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
     <h1>Hello World!</h1>
 
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut architecto facere ex voluptatum aliquid, assumenda ad officiis perferendis culpa quas? Aspernatur maiores cum accusantium nihil nisi suscipit dolorem, optio hic!</p>
+
     <script src="js/app.js"></script>
 </body>
 </html>
